# milliquad_real-to-sim

./: .gitignore  README.md  pyproject.toml
experimental_data/: plot_pitch_vs_freq.py  plot_velocity_vs_freq.py
experimental_data/csv/: random_terrain_raw.csv  random_terrain_raw_with_time.csv
experimental_data/csv/flat/: f102leg1-1.csv  f102leg2-2.csv  f102leg3-3.csv  f102leg4-4.csv  f104leg1-1.csv  f104leg2-2.csv  f104leg3-3.csv  f104leg4-4.csv  f10leg1-1.csv  f10leg2-2.csv  f10leg3-3.csv  f10leg4-4.csv  f10w1-1.csv  f10w2-2.csv  f10w3-3.csv  f10w4-4.csv  f202leg1-1.csv  f202leg2-2.csv  f202leg3-3.csv  f204leg1-1.csv  f204leg2-2.csv  f204leg3-3.csv  f20leg1-1.csv  f20leg2-2.csv  f20leg3-3.csv  f20w1-1.csv  f20w2-2.csv  f20w3-3.csv  f302leg1-1.csv  f302leg2-2.csv  f302leg3-3.csv  f302leg4-4.csv  f304leg1-1.csv  f304leg2-2.csv  f304leg3-3.csv  f304leg4-4.csv  f30leg1-1.csv  f30leg2-2.csv  f30leg3-3.csv  f30leg4-4.csv  (+16 more)
experimental_data/csv/steps/: s102leg1-1.csv  s102leg2-2.csv  s102leg3-3.csv  s104leg1-1.csv  s104leg2-2.csv  s104leg3-3.csv  s10leg1-1.csv  s10leg2-2.csv  s10leg3-3.csv  s202leg1-1.csv  s202leg2-2.csv  s202leg3-3.csv  s204leg1-1.csv  s204leg2-2.csv  s204leg3-3.csv  s20leg1-1.csv  s20leg2-2.csv  s20leg3-3.csv  s302leg1-1.csv  s302leg2-2.csv  s302leg3-3.csv  s304leg1-1.csv  s30w1-1.csv  (+7 more)
milliquad_opt/: config_rough_tg.py  config_step_065.py  optimizer.py  simulation.py
milliquad_opt/analysis/: 20260303_plot_megacomposite_nocot_065.py  _common.py  plot_cot_065.py  plot_exp_vs_sim_composite.py  plot_trajectories.py  plot_validation.py  validate_params.py
(+34 files in other folders)
