[project]
name = "milliquad-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cma>=4.4.2",
    "h5py>=3.15.1",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mujoco>=3.4.0",
    "plotly>=6.5.2",
    "scikit-optimize>=0.10.2",
    "scipy>=1.17.0",
    "tqdm>=4.66.0",
]
